methods.basics.Methods.scala.code
def goAndGet() {
  while(!overBaggle()){
  forward()
  }if(overBaggle()){
    pickupBaggle()
  }
}

for (i <- 1 to 7) {
    goAndGet();
    right();
    forward();
    left();
}